exports[`Button renders Chinese characters correctly 1`] = `
<button
  className="ant-btn"
  onClick={[Function]}
  onMouseUp={[Function]}
  type="button">
  <span>
    按 钮
  </span>
</button>
`;

exports[`Button renders correctly 1`] = `
<button
  className="ant-btn"
  onClick={[Function]}
  onMouseUp={[Function]}
  type="button">
  <span>
    Follow
  </span>
</button>
`;
